# ghcjs

./: .gitignore  .gitmodules  .hlint.yaml  .travis.yml  Dockerfile  HACKING.markdown  INSTALL.windows  LICENSE  README.markdown  Setup.hs  build.extra.yaml  cabal.project  ghcjs.cabal  package.cabal  release.nix  sources.txt  stack.yaml
lib/ghcjs-prim/: LICENSE  ghcjs-prim.cabal
lib/ghcjs-prim/GHCJS/: Prim.hs
lib/ghcjs-prim/cbits/: ghcjs-prim.c
lib/ghcjs-prim/include/: foreign-compat.h
lib/ghcjs-th/: ghcjs-th.cabal
test/: Client.hs  LICENSE  Server.hs  TestLinkBase.hs  TestLinkMain.hs  TestRunner.hs  Types.hs  benchmarks.yaml  ghcjs-testsuite.cabal  ghcjs-testsuite.cabal.tmpl  runTravis.sh  tests.yaml  wdindex.html  wdrunmain.js  wdstart.js
test/arith/: test.txt
test/conc/: async.hs  deadlocks.hs  deadlocks.out  deadlocks.settings  resumableThunk.hs  resumableThunk.out  stm-t288.hs  stm001.hs  stm002.hs  stm003.hs  stm004.hs  stm004.settings  stm005.err  stm005.hs  stm005.out  stm006.hs  stm006.out  stm007.hs  stm008.hs  syncBlackhole.hs  syncBlackhole.out  syncBlackhole.settings  syncThreads.err  syncThreads.hs  syncThreads.out  syncThreads.settings
test/fay/: basicFunctions.hs  bool.hs  case.hs  case2.hs  caseList.hs  caseWildcard.hs  char.hs  circular.hs  curry.hs  cycle.hs  do.hs  doAssignPatterMatch.hs  doBindAssign.hs  doLet.hs  doLet2.err  doLet3.err  doLet3.hs  doLet3.out  double.hs  double2.hs  double3.hs  double4.hs  either.hs  enumFrom.hs  eq.hs  error.err  error.hs  fix.hs  floating.hs  fromInteger.hs  guards.hs  infixDataConst.hs  integral.hs  ints.hs  lazyOperators.hs  linesAndWords.hs  list.hs  list2.hs  listComprehensions.hs  listlen.hs  (+39 more)
test/ffi/: callback.hs  callback.out  export.hs  export.out  ffiExceptions.err  ffiExceptions.hs  ffiExceptions.out  irrefutablePattern.hs  irrefutablePattern.out  jsString.hs  jsString.out  marshalString.hs  marshalString.out  narrow.hs  narrow.out
test/ghc/: README
test/ghc/annotations/: annrun01.settings
test/ghc/array/: arr003.err  arr004.err  arr007.err  arr008.err  arr016.hs
test/ghc/codeGen/: 1861.err  2080.hs  4441.hs  5626.err  6146.settings  T7600_A.hs  cgrun015.js  cgrun016.err  cgrun018.hs  cgrun026.hs  cgrun034.hs  cgrun035.js  cgrun044.hs  cgrun045.err  cgrun051.err  cgrun053.err  cgrun057.hs  cgrun064.hs  cgrun066.hs  cgrun068.hs  cgrun070.hs  t10870.settings  t12059.settings  t9577.settings  word2Float64.hs
test/ghc/concurrent/: T13916_Bracket.hs  atomicPrimops.hs  conc015.hs  conc015a.hs  conc032.out  conc058.err  conc064.hs  conc065.settings  conc067.hs  performGC.err  setnumcapabilities001.settings  t13330.err  t3279.hs  t3429.hs  t367.settings  t367_letnoescape.settings  t9379.settings  throwto001.err  throwto001.settings  throwto003.settings
test/ghc/deSugar/: dsrun002.hs  dsrun005.err  dsrun007.err  dsrun008.err  dsrun014.err  dsrun014.hs  dsrun014.settings  mc03.hs  t11193.err  t11572.err  t11601.err  t246.out  t5742.hs
test/ghc/deriving/: drvrun017.out  drvrun019.hs  drvrun022.out  t5628.err  t9576.err
test/ghc/gadt/: t9380.out
test/ghc/indexed-types/: t5719.hs
test/ghc/integer/: fromToInteger.hs  gcdInteger.hs  gcdInteger.out
test/ghc/mdo/: mdorun001.hs  mdorun002.hs
test/ghc/numeric/: arith005.hs  arith008.hs  arith012.hs  arith016.hs  expfloat.hs  expfloat.settings  quotRem2.hs  quotRem2.out  t15271.settings  t3676.hs  t3676.out  t9810.hs
test/ghc/overloadedlists/: overloadedlistsrun04.settings
test/ghc/perf/: conversions.hs  lazy-bs-alloc.settings  t3586.hs  t4474a.hs  t4474b.hs  t4474c.hs  t4978.settings  t7257.settings  t7507.settings  t876.settings
test/ghc/polykinds/: monoidsFD.hs  monoidsTF.hs
test/ghc/primops/: t10481.err
test/ghc/quotes/: t3572.hs  tH_ppr1.hs
test/ghc/rebindable/: rebindable2.hs
test/ghc/rts/: gcStaticPointers.hs  listStaticPointers.hs  stack003.out  t2047.hs  t2783.err  t7087.err
test/ghc/simplCore/: T5441a.hs  seqRule.hs  simplrun002.err  simplrun002.settings  simplrun005.out  simplrun007.out  simplrun007.settings  simplrun008.out  simplrun010.err  simplrun010.out  t2486.err  t3437.settings  t3591.settings  t5453.hs  t5603.hs  t5625.err  t5920.hs  t5997.settings  t7924.err
test/ghc/stranal/: strun002.err  strun003.err  t12368.err  t12368a.err  t13380.err  t13380.settings  t7649.out
test/ghc/th/: TH_spliceE5_Lib.hs  TH_unresolvedInfix_Lib.hs  t10697_decided_2.settings  t10697_decided_3.settings  t3572.hs  tH_StaticPointers.hs  tH_StringPrimL.hs  tH_lookupName.hs  tH_ppr1.hs  tH_recover.hs  tH_repE2.hs  tH_repGuardOutput.hs  tH_repPrimOutput.hs  tH_repPrimOutput2.hs  tH_spliceE1.hs  tH_spliceE4.hs  tH_spliceE5.hs  tH_unresolvedInfix.hs  tH_viewPatPrint.hs
test/ghc/typecheck/: T4809_IdentityT.hs  T4809_XMLGenerator.hs  t10284.err  t10284.out  t11049.err  t11715.err  t13838.err  t3500a.hs  t5751.hs  t7126.hs  t7861.err  t7861.hs  t9497a-run.err  t9497a-run.settings  t9497b-run.err  t9497b-run.settings  t9497c-run.err  t9497c-run.settings  tcNullaryTC.hs  tcrun008.hs  tcrun037.hs  tcrun043.hs  tcrun044.hs  typeable1.err  typeable1.out
test/ghc/unboxedsums/: unboxedsums2.settings  unboxedsums_unit_tests.settings
test/integer/: add.hs  convert.hs  convert.out  int.hs  int.out  subtract.hs
test/pkg/base/: addr001.out  assert.err  assert.settings  cstring001.hs  dynamic002.hs  dynamic004.hs  exceptionsrun001.out  genericNegative001.err  hGetBuf002.hs  hGetBuf003.settings  hPutBuf002.settings  hTell001.hs  hTell001.settings  length001.hs  lex001.hs  list003.hs  memo002.settings  qsem001.hs  qsemn001.hs  quotOverflow.hs  readFloat.err  t7457.hs  take001.err  trace001.hs  unicode001.hs  unicode002.hs
test/profiling/: callstack001.settings  callstack002.hs  callstack002.out  callstack002.settings  cls.err  cls.hs  cls.out  ioerr.hs  ioerr.out  pap.hs  pap.out  pap.settings  stacktrace.err  stacktrace.hs  stacktrace.out  stacktrace.settings  thread.hs  thread.out  thread.settings
test/rts/: README  gc.js  test.js
test/web/: websocket.hs  websocket.out  websocket.settings
utils/patch/: LICENSE  ghcjs-patch.cabal
(+513 files in other folders)
