Name:           ghcjs
Version:        8.6.0.1
Synopsis:       Haskell to JavaScript compiler
Description:    Haskell to JavaScript compiler based on GHC
Category:       compiler, web
License:        MIT
License-file:   LICENSE
Author:         Victor Nazarov, Hamish Mackenzie, Luite Stegeman
Copyright:      Victor Nazarov, Hamish Mackenzie, Luite Stegeman
Maintainer:     Luite Stegeman <stegeman@gmail.com>
Stability:      Experimental
Build-Type:     Custom
Cabal-Version:  >= 2.0

data-dir:       data
data-files:     *.tar
                bin/*.sh
                bin/*.exe.options

extra-source-files:
                utils/*.hs
                utils/*.sh
                include/prim/*.hs-incl
                include/prim/*.txt
                include/*.h
                src-bin/haddock/*.hs
                HACKING.markdown
                README.markdown
                test/LICENSE
                test/ghcjs-testsuite.cabal
                stack.yaml

source-repository head
  type:     git
  location: https://github.com/ghcjs/ghcjs.git

-- only build the library and ghcjs executable
flag compiler-only
  description: only build the library and ghcjs executable
  default:     False
  manual:      True

-- Don't rename the executables to include the version number in the filename
-- and install the wrapper scripts. This means that you need to supply your own
-- scripts to pass the correct library paths to the programs. See Setup.hs and
-- the template files in /lib/etc for more information.
flag no-wrapper-install
  description: don't install wrapper scripts and add version numbers to the executable names
  default:     False
  manual:      True

flag disable-optimizer
  description: disable the GHCJS optimizer, for debugging purposes
  default:     False
  manual:      True

flag runtime-assertions
  description: add runtime assertions to the generated code, for debugging purposes (this makes the code much bigger and slower!)
  default:     False
  manual:      True

-- build against the template haskell package from the host GHC
--  (which must be built with the GHCJS patches)
flag use-host-template-haskell
  description: build against template-haskell package from the host GHC
               instead of template-haskell-ghcjs
  default:     False
  manual:      True


Library
    if os(Windows)
      cpp-options: -DWINDOWS
    Default-Language: Haskell2010
    exposed-modules: Gen2.Generator,
                     Gen2.Profiling,
                     Gen2.Floater,
                     Gen2.Prim,
                     Gen2.Rts,
                     Gen2.RtsApply,
                     Gen2.RtsTypes,
                     Gen2.RtsAlloc,
                     Gen2.Utils,
                     Gen2.StgAst,
                     Gen2.Optimizer,
                     Gen2.Dataflow,
                     Gen2.Deps,
                     Gen2.Printer,
                     Gen2.Linker,
                     Gen2.Shim,
                     Gen2.Compactor,
                     Gen2.Object,
                     Gen2.Archive,
                     Gen2.ClosureInfo,
                     Gen2.Foreign,
                     Gen2.Sinker,
                     Gen2.TH,
                     Gen2.Base,
                     Gen2.Cache,
                     Gen2.DynamicLinking,
                     Gen2.GHC.Digraph,
                     Gen2.GHC.DsForeign,
                     Compiler.Compat,
                     Compiler.GhcjsHooks,
                     Compiler.GhcjsPlatform,
                     Compiler.Info,
                     Compiler.Plugins,
                     Compiler.Program,
                     Compiler.GhcjsProgram,
                     Compiler.Settings,
                     Compiler.Utils,
                     Compiler.Variants,
                     Compiler.JMacro,
                     Compiler.JMacro.Base,
                     Compiler.JMacro.Lens,
                     Compiler.JMacro.QQ,
                     Compiler.JMacro.ParseTH,
                     Compiler.JMacro.Util,
                     GHCJS
    other-modules: Paths_ghcjs
    autogen-modules: Paths_ghcjs

    if(flag(use-host-template-haskell))
        build-depends: ghci
    else
        build-depends: template-haskell-ghcjs, ghci-ghcjs

    build-depends: base           >= 4        && < 5,
                   Cabal          >= 2.4,
                   ghc-api-ghcjs,
                   ghcjs-th,
                   ghc-boot,
                   directory,
                   filepath,
                   containers,
                   process,
                   mtl,
                   ghc-paths,
                   template-haskell,
                   syb            >= 0.6      && < 0.8,
                   bytestring     >= 0.10     && < 0.11,
                   attoparsec     >= 0.12     && < 0.14,
                   aeson          >= 1.4      && < 1.5,
                   text           >= 1.2      && < 1.3,
                   wl-pprint-text >= 1.1      && < 1.3,
                   lens           >= 4.15     && < 4.18,
                   yaml           >= 0.10     && < 0.12,
                   time,
                   transformers,
                   split          >= 0.2      && < 0.3,
                   deepseq,
                   vector         >= 0.12     && < 0.13,
                   data-default   >= 0.7      && < 0.8,
                   array          >= 0.4      && < 0.6,
                   -- experimental binary 0.9 and 0.10 ?
                   binary         >= 0.7      && < 0.9,
                   unordered-containers >= 0.2 && < 0.3,
                   parallel       >= 3.2      && < 3.3,
                   cryptohash     >= 0.11     && < 0.12,
                   hashable,
                   optparse-applicative       >= 0.14 && < 0.15,
                   stringsearch               >= 0.3 && < 0.4,
                   base16-bytestring          >= 0.1 && < 0.2,
                   base64-bytestring          >= 1.0 && < 1.1,
                   -- for JMacro
                   regex-posix                >= 0.90 && < 0.100,
                   safe                       >= 0.3  && < 0.4,
                   parsec                     >= 3.1  && < 3.2,
                   -- fixme haskell-src-exts, bump?
                   haskell-src-exts           >= 1.20 && < 1.21,
                   haskell-src-meta           >= 0.6.0.3  && < 0.9
    exposed: True
    buildable: True
    hs-source-dirs: src
    include-dirs: include
    GHC-Options: -Wall -fno-warn-orphans -fno-warn-name-shadowing -fno-warn-unused-do-bind -fprof-auto-calls
    if flag(disable-optimizer)
      cpp-options: -DDISABLE_OPTIMIZER
    if flag(runtime-assertions)
      cpp-options: -DRUNTIME_ASSERTIONS

-- the compiler executable, Setup.hs installs a wrapper script that
-- supplies the installation directory
Executable ghcjs
    scope: private
    Main-Is:        Main.hs
    Default-Language: Haskell2010
    hs-source-dirs: src-bin
    Build-Depends:  base                >= 4    &&  < 5,
                    ghcjs
    GHC-Options:    -rtsopts -with-rtsopts=-N -with-rtsopts=-K1024m -threaded -fprof-auto-calls

Executable haddock-ghcjs
    scope: private
    if os(Windows)
      cpp-options: -DWINDOWS
    Main-Is:        Haddock.hs
    Default-Language: Haskell2010
    hs-source-dirs: src-bin, src-bin/haddock
    other-modules: ResponseFile

    Build-Depends: ghc-api-ghcjs,
                   haddock-api-ghcjs

    Build-Depends:  base                >= 4    &&  < 5,
                    process,
                    transformers,
                    transformers-compat,
                    containers,
                    directory,
                    filepath,
                    ghcjs
    GHC-Options:    -Wall

Executable hsc2hs-ghcjs
    scope: private
    if os(Windows)
      cpp-options: -DWINDOWS
    Main-Is:        Hsc2Hs.hs
    Default-Language: Haskell2010
    hs-source-dirs: src-bin
    Build-Depends:  base                >= 4    &&  < 5,
                    ghcjs,
                    process
    GHC-Options:    -Wall

-- the package manager, like with the compiler, this executable is called
-- through a wrapper script
Executable ghcjs-pkg
    scope: private
    if flag(compiler-only)
      Buildable:      False
    Main-Is: Pkg.hs
    Default-Language: Haskell2010
    Hs-Source-Dirs:   src-bin
    Build-Depends:    ghcjs,
                      base       >= 4   && < 5,
                      directory  >= 1,
                      process    >= 1,
                      filepath,
                      containers,
                      Cabal,
                      binary,
                      bytestring,
                      ghc-boot

    if !os(windows)
        Build-Depends: unix,
                       terminfo
    if os(windows)
        c-sources: cbits/CRT_noglob.c

-- the boot program, this prepares a ghcjs installation by populating the
-- installation directory and building the boot libraries
Executable ghcjs-boot
    scope: private
    if flag(compiler-only)
      Buildable:      False
    if os(Windows)
      cpp-options: -DWINDOWS
    ghc-options:      -threaded -Wall -fno-warn-orphans -fno-warn-name-shadowing -fno-warn-unused-do-bind -fprof-auto
    Main-Is:          Boot.hs
    Default-Language: Haskell2010
    Hs-Source-Dirs:   src-bin
    Build-Depends:    base                 >= 4      && < 5,
                      ghcjs,
                      directory,
                      Cabal,
                      mtl,
                      transformers,
                      lens,
                      unordered-containers,
                      vector,
                      filepath,
                      aeson,
                      text                 >= 0.11   && < 1.3,
                      bytestring           >= 0.10   && < 0.11,
                      system-filepath      >= 0.4    && < 0.5,
                      shelly               >= 1.7    && < 1.9,
                      system-fileio        >= 0.3    && < 0.4,
                      optparse-applicative >= 0.11   && < 0.15,
                      tar                  >= 0.5    && < 0.6,
                      yaml                 >= 0.10   && < 0.12,
                      process              >= 1.2,
                      time                 >= 1.8    && < 1.10,
                      unix-compat          >= 0.5    && < 0.6,
                      executable-path      >= 0      && < 0.1

Executable ghcjs-run
    scope: private
    if flag(compiler-only)
      Buildable:      False
    if os(Windows)
      cpp-options: -DWINDOWS
    ghc-options:      -threaded
    Main-Is:          Run.hs
    Default-Language: Haskell2010
    Hs-Source-Dirs:   src-bin
    Build-Depends:    base                 >= 4      && < 5,
                      directory,
                      process,
                      filepath

Executable ghcjs-dumparchive
    scope: private
    if flag(compiler-only)
      Buildable:      False
    if os(Windows)
      cpp-options: -DWINDOWS
    ghc-options:      -threaded
    Main-Is:          dumpArchive.hs
    Default-Language: Haskell2010
    Hs-Source-Dirs:   utils
    Build-Depends:    base                 >= 4      && < 5,
                      text,
                      ghc-api-ghcjs,
                      ghcjs,
                      bytestring,
                      filepath


-- our test suite, requires JavaScript environments to run the tests:
--   - node.js              http://nodejs.org/
--   - SpiderMonkey jsshell http://download.cdn.mozilla.net/pub/firefox/nightly/latest-mozilla-central/
--   - JavaScriptCore       ?
--   - Selenium WebDriver   http://www.seleniumhq.org/
--        for Selenium server:
--          - Firefox
--          - ChromeDriver - http://chromedriver.storage.googleapis.com/index.html
--          - Opera / IE
--
-- don't forget to run utils/updateTestSuite.hs after updating this section
-- to update the cabal file for the stand-alone testsuite package
test-suite test
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    Default-Language: Haskell2010
    ghc-options:      -threaded
    main-is:          TestRunner.hs
    other-modules:    Server
                      Client
                      Types
    build-depends:    base                 >= 4 && < 5,
                      process,
                      network,
                      aeson,
                      test-framework       >= 0.8,
                      test-framework-hunit >= 0.3,
                      HUnit                >= 1.6 && < 1.7,
                      system-filepath      >= 0.4 && < 0.5,
                      system-fileio        >= 0.3 && < 0.4,
                      text,
                      transformers,
                      lens,
                      random,
                      time,
                      bytestring,
                      deepseq,
                      unordered-containers,
                      shelly               >= 1.5 &&  < 1.9,
                      data-default         >= 0.7 &&  < 0.8,
                      yaml                 >= 0.10 && < 0.11,
                      optparse-applicative,
                      directory,
                      http-types           >= 0.11 &&  < 0.13,
                      warp                 >= 3.0  &&  < 3.3,
                      wai                  >= 3.0  &&  < 3.3,
                      wai-extra            >= 3.0  &&  < 3.1,
                      wai-app-static       >= 3.0  &&  < 3.2,
                      wai-websockets       >= 3.0  &&  < 3.1,
                      websockets           >= 0.12 &&  < 0.13,
                      webdriver            >= 0.8  &&  < 0.9,
                      lifted-base          >= 0.2  &&  < 0.3

Custom-Setup
  Setup-Depends:      base,
                      Cabal >= 2.4,
                      containers,
                      filepath,
                      directory,
                      process,
                      template-haskell,
                      transformers
